# PhotonicsCAD

./: 123.pro  CMakeLists.txt  CONTRIBUTING.md  README.md
app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
component_library/: CMakeLists.txt  CMakeLists.txt.autosave  ComponentDefinition.h  ComponentLibraryManager.cpp  ComponentLibraryManager.h
domain/: CMakeLists.txt  Circuit.h  ComponentInstance.cpp  ComponentInstance.h  PinInstance.cpp  PinInstance.h  Wire.h
editor/: CMakeLists.txt  CircuitScene.cpp  CircuitScene.h  GraphicsComponentItem.cpp  GraphicsComponentItem.h  GraphicsView.cpp  GraphicsView.h  PinItem.cpp  PinItem.h  WireItem.cpp  WireItem.h
editor/doc/: classDiagram.puml  interaction.puml
resources/: resources.qrc
resources/data/: components.json
ui/: CMakeLists.txt  ComponentListWidget.cpp  ComponentListWidget.h  PropertyEditorDialog.cpp  PropertyEditorDialog.h
